refac: new DTOs, but still buggy JSONs